--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,11 +66,14 @@
         <meta-data
             android:name="androidx.room.RoomDatabase.VERSION"
             android:value="3" />
-
+        <activity
+            android:name=".ui.account.ExitActivity"
+            android:exported="false"
+            android:theme="@style/Theme.TaxiEasyUa.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
             android:theme="@style/Theme.TaxiEasyUa.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -85,23 +88,23 @@
 
         <activity
             android:name=".ui.open_map.OpenStreetMapActivity"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
             android:exported="true"
             android:theme="@style/Theme.TaxiEasyUa.NoActionBar" />
 
         <activity android:name=".ui.open_map.OpenStreetMapVisicomActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
             android:theme="@style/Theme.TaxiEasyUa.NoActionBar"
             tools:ignore="Instantiatable"
             />
 
         <activity android:name=".ui.visicom.visicom_search.ActivityVisicomOnePage"
             android:exported="true"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
             android:theme="@style/Theme.TaxiEasyUa.NoActionBar"
             tools:ignore="Instantiatable" />
-
+        <activity android:name=".cities.check.CityCheckActivity" />
         <receiver android:name=".NetworkChangeReceiver" />
 
         <provider
