--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.taxi.easy.ua"
         minSdk 26
         targetSdk 35
-        versionCode 1796
-        versionName '1.797'
+        versionCode 1798
+        versionName '1.798'
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resourceConfigurations += ['en', 'ru', 'uk']
@@ -27,10 +27,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+    java {
+        sourceCompatibility = JavaVersion.VERSION_23
+        targetCompatibility = JavaVersion.VERSION_23
     }
+
+
     buildFeatures {
         dataBinding = true
         viewBinding = true
@@ -38,83 +40,74 @@ android {
 }
 
 dependencies {
+    // Основные зависимости
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.core:core:1.15.0'
-
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
-    implementation 'com.google.android.gms:play-services-location:21.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.4.0'
-    implementation 'org.chromium.net:cronet-embedded:119.6045.31'
     implementation 'androidx.datastore:datastore-preferences-core-jvm:1.1.2'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    implementation 'com.github.anrwatchdog:anrwatchdog:1.4.0'
+    implementation 'androidx.databinding:databinding-runtime:8.8.0'
 
+
+    // Firebase зависимости (с использованием BOM)
+    implementation platform('com.google.firebase:firebase-bom:33.9.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-auth' // для Firebase UI
+
+    // Retrofit и OkHttp
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+
+
+
+    // Google Play библиотеки
+    implementation 'com.google.android.play:asset-delivery:2.3.0'
+    implementation 'com.google.android.play:feature-delivery:2.1.0'
+    implementation 'com.google.android.play:review:2.0.2'
+    implementation 'com.google.android.play:app-update:2.1.0'
+    implementation 'com.google.android.gms:play-services-wallet:19.4.0'
+    implementation 'com.google.android.gms:play-services-location:21.3.0'
+    implementation 'com.google.android.gms:play-services-base:18.5.0'
+
+    // Parse SDK (для работы с Parse сервером)
     implementation "com.github.parse-community.Parse-SDK-Android:parse:4.2.0"
-    // for Google login/signup support (optional)
     implementation "com.github.parse-community.Parse-SDK-Android:google:4.2.0"
 
-
+    // ConstraintLayout и жизненный цикл
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.7'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
     implementation 'androidx.navigation:navigation-fragment:2.8.6'
     implementation 'androidx.navigation:navigation-ui:2.8.6'
-    implementation 'com.google.android.gms:play-services-maps:19.0.0'
-    implementation 'androidx.annotation:annotation:1.9.1'
+
+    // Firebase UI для аутентификации
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+
+    // Osmdroid и osmbonuspack
+    implementation 'org.osmdroid:osmdroid-android:6.1.16'
+    implementation 'com.github.MKergall:osmbonuspack:6.9.0'
+
+    // Пиксельная обработка изображений
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    // Room для работы с локальной базой данных
+    implementation "androidx.room:room-runtime:2.6.1"
+    annotationProcessor "androidx.room:room-compiler:2.6.1"
+
+    // Стартовые зависимости
+    implementation 'androidx.startup:startup-runtime:1.2.0'
+
+    // Тестовые зависимости
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
-
-    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
-    implementation platform('com.google.firebase:firebase-bom:33.8.0')
-    implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-crashlytics:19.4.0'
-
-
-    implementation 'org.osmdroid:osmdroid-android:6.1.16'
-
-    implementation 'com.github.MKergall:osmbonuspack:6.9.0'
-
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
-
-
-    constraints {
-        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
-            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
-        }
-        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
-            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
-        }
-    }
-    implementation 'com.google.android.gms:play-services-base:18.5.0'
-    implementation 'com.google.android.gms:play-services-wallet:19.4.0'
-
-    implementation "androidx.room:room-runtime:2.6.1" // Убедитесь, что версия соответствует вашей версии Room
-    annotationProcessor "androidx.room:room-compiler:2.6.1" // То же касается версии здесь
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'androidx.work:work-runtime:2.10.0'
-
-
-    implementation 'com.google.android.play:asset-delivery:2.3.0'
-    implementation 'com.google.android.play:feature-delivery:2.1.0'
-    implementation 'com.google.android.play:review:2.0.2'
-    implementation 'com.google.android.play:app-update:2.1.0'
-
-    implementation 'com.github.anrwatchdog:anrwatchdog:1.4.0'
-
-    implementation "androidx.startup:startup-runtime:1.2.0"
-
-    implementation 'com.google.firebase:firebase-messaging:24.1.0'
-
-    implementation 'com.google.firebase:firebase-firestore-ktx'
-
-    implementation 'com.google.firebase:firebase-firestore:25.1.1'
 }
